--- a/index-1.html
+++ b/index-1.html
@@ -17,25 +17,25 @@
   
 </head> 
 <body> 
-<header class="fl-hdr">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="header-innr clearfix"> 
-          <div class="hdr-left"> 
-            <a class="hdr-logo" href="#">
-              <img class="lazy" data-src="assets/images/logo.jpg" alt="Logo" />
-            </a>
+  <header class="fl-hdr">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="header-innr clearfix"> 
+            <div class="hdr-left"> 
+              <a class="hdr-logo" href="#">
+                <img class="lazy" data-src="assets/images/logo.jpg"/>
+              </a>
+            </div>
+            <div class="hdr-rgt"> 
+              <a class="secure-img">
+                <img class="lazy" data-src="assets/images/hdr-secure-img.jpg"/>
+              </a>   
+            </div> 
           </div>
-          <div class="hdr-rgt"> 
-            <a class="secure-img">
-              <img class="lazy" data-src="assets/images/hdr-secure-img.jpg" alt="secure"/>
-            </a>   
-          </div> 
         </div>
       </div>
     </div>
-  </div>
 </header>
 
 <div class="fl-page-bdy-controller">
