--- a/index-2.html
+++ b/index-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Automator</title>
+  <title>Lifetitan-upsell</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="style-1.css">
   <link rel="stylesheet" href="style-2.css">
-  <link rel="stylesheet" href="style-3.css">
   <link rel="stylesheet" href="common.css">
   
 </head> 
