--- a/index-2.html
+++ b/index-2.html
@@ -41,7 +41,21 @@
 
 <div class="fl-page-bdy-controller">
 
-<section class="plr-10">
+<section class="ln-sec-one">
+  <div class="ln-sec-one-hedding">
+    <div class="ln-sec-one-top-hdng">
+      <h2 class="ln-sec-one-title"></h2>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="ln-sec-one-hedding-inr">
+            <h2 class="ln-sec-one-sub-title"></h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container">
     <div class="row">
       <div class="col-md-6">
