shipping sec done

--- a/index-1.html
+++ b/index-1.html
@@ -39,36 +39,34 @@
 
 <div class="fl-page-bdy-controller">
 
-<section class="plr-10">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="">
-          
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="">
-          
-        </div>
+  <section class="fl-shipping-progress-bar plr-10"> 
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="fl-shipping clearfix text-center">
+            <div class="fl-shipping-col">
+              <img class="lazy" data-src="assets/images/progress-bar-img001.png">
+              <h4>Initial Order</h4>
+            </div>
+            <div class="fl-shipping-col two_sec">
+              <img class="lazy" data-src="assets/images/progress-bar-img002.png">
+              <h4>Optional Upgrades</h4>
+            </div>
+            <div class="fl-shipping-col">
+              <img class="lazy" data-src="assets/images/progress-bar-img003.png">
+              <h4>Order completed</h4>
+            </div>
+          </div>          
+        </div>        
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
 
 
 
 </div>
 
-<div class="ctu">
-  <ul>
-    <li>sslll</li>
-    <li>sslll</li>
-    <li>sslll</li>
-    <li>sslll</li>
-  </ul>
-</div>
 
 
 <script src="assets/js/jquery.min.js"></script>
