--- a/index-1.html
+++ b/index-1.html
@@ -63,6 +63,54 @@
   </section>
 
 
+  <section class="fl-page-bnr inline-bg lazy plr-30" data-src="assets/images/page-bnr.jpg">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="fl-page-bnr-cntlr">
+            <h1><strong>Get the</strong> <br> CellXRenewal™ <br> <strong>Platinum Pass</strong></h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<footer class="fl-footer-wrap plr-10">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="fl-footer-inner">
+            <nav class="fl-ftr-nav">
+              <ul class="clearfix ulc">
+                <li><a target="_blank" href="#">About Us</a></li>
+                <li><a target="_blank" href="#">Terms</a></li>
+                <li><a target="_blank" href="#">Privacy</a></li>
+                <li><a target="_blank" href="#">Contact</a></li>
+                <li><a target="_blank" href="#">Return Policy</a></li>
+              </ul>
+            </nav>
+            
+            <div class="fl-ftr-des">
+              <p>Disclaimer: Statements on this website have not been evaluated by the Food and Drug Administration. Products are not intended to diagnose, treat, cure or prevent any disease. If you are pregnant, nursing, taking medication, or have a medical condition, consult your physician before using our products.</p> 
+
+              <p>Not intended for children.</p>
+
+              <p>You should always consult with your healthcare practitioner prior to starting any new dietary supplement or program.</p>
+              <p>The information provided on this site is for informational purposes only and is not intended as a substitute for advice from your physician or other healthcare professional or any information contained on or in any product label or packaging. You should not use the information on this site for diagnosis or treatment of any health problem or for prescription of any medication or other treatment. Always consult with a healthcare professional before starting any diet, exercise or supplementation program, before taking any medication, or if you have or suspect you might have a health problem. You should not stop taking any medication without first consulting your physician.</p>
+              <p>As individuals differ, so will results. Life Titan Naturals distributes a product line made with natural ingredients. Always check with your doctor for risks associated with dietary supplements and your specific health conditions and/or allergies.
+              Resale: Products are not allowed to be resold without prior written consent.
+              Customs: International shipments may incur additional import duties and fees. Life Titan Naturals is not responsible for any additional charges incurred. Please contact your local customs office for current policies and procedures.
+              *Return Policy: All bottles ordered need to be returned for a full refund on every bottle, empty, unopened or partially used. For more on Life Titan Naturals refund policy, please click here.
+              </p>
+            </div>
+            <div class="fl-copyright">
+              <p>Copyright © 2020. Life Titan Naturals</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
 </div>
