--- a/index-2.html
+++ b/index-2.html
@@ -40,7 +40,7 @@
 
 <div class="fl-page-bdy-controller">
 
-<section class="ln-sec-one">
+<section class="ln-sec-one plr-10">
   <div class="ln-sec-one-hedding lazy" style="background: url('assets/images/ln-sec1-hdr-bg2.png');">
     <div class="ln-sec-one-top-hdng lazy" style="background: url('assets/images/ln-sec1-hdr-bg.png');">
       <h2 class="ln-sec-one-title text-white">Number #2</h2>
@@ -89,7 +89,7 @@
   </div>
 </section>
 
-<section class="ln-sec-two lazy inline-bg" style="background: url('assets/images/ln-sec2-bg-img.png');">
+<section class="ln-sec-two plr-10 lazy inline-bg" style="background: url('assets/images/ln-sec2-bg-img.png');">
   <div class="container">
     <div class="row">
       <div class="col-md-6 pull-right">
@@ -111,7 +111,7 @@
   </div>
 </section>
 
-<section class="ln-sec-three">
+<section class="ln-sec-three plr-10">
   <div class="container">
     <div class="row">
       <div class="col-md-6 pull-right">
@@ -122,9 +122,9 @@
       <div class="col-md-6 pull-left">
         <div class="ln-sec-three-desc ln-sec-one-desc">
           <div class="entry-nmbr inline-bg lazy text-white" style="background: url('assets/images/entry-nmbr-bg.png');">
-            <h3>02.</h3>
+            <h3>03.</h3>
           </div>
-          <h3 class="text-green">Discover top Anti-Aging tips, tricks<br> and hacks only found in the Life<br> Titan Insider Premium Newsletter.</h3>
+          <h3 class="text-green">Discover top Anti-Aging tips, tricks and hacks only found in the Life Titan Insider Premium Newsletter.</h3>
           <h6 class="text-green">(Lifetime Subscription: <span>$1,995 Value</span>)</h6>
           <p>What’s happening right now in the nation’s healthcare sector is exactly why I created a special lifetime subscription of our Life Titan Insider Newsletter.</p>
            <p>Once you become a CellXRenewal™ Platinum Pass Member you’ll  know that your subscription will last forever... that there will be no nasty surprises when your health is on the line and you need to turn to this information the most.</p>
@@ -143,15 +143,45 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div class="ln-sec-three-grid">
-          <ul class="ctu">
-            <li><strong>The pursuit of profit</strong><br>
-              How frankenfood<br> skyrocketed hospital bills...</li>
-              <li><strong>Sugar is not always sweet<br> especially when it does<br> this...</strong></li>
-              <li>Discover the moonshiner’s<br> secret to arthritis pain<br> relief!</li>
-              <li>Destroy smoking damage<br> with this potent vitamin!</li>
-              <li>Why dementia is<br> everyone’s problem...<strong>no<br> matter your age.</strong></li>
-              <li><strong>Slash your risk of stroke<br> with this ancient snowy<br> Alp flower.</strong></li>
+        <div class="ln-sec-three-sub-sec ln-sec-three-grid">
+          <ul class="reset-list">
+            <li>
+              <div class="ln-sec-three-grid-item">
+                <i><img class="lazy" src="assets/images/list-icon.png" alt=""></i>
+                <p><strong>The pursuit of profit</strong><br>
+              How frankenfood skyrocketed hospital bills...</p>
+              </div>
+            </li>
+            <li>
+              <div class="ln-sec-three-grid-item">
+                <i><img class="lazy" src="assets/images/list-icon.png" alt=""></i>
+                <p><strong>Sugar is not always sweet especially when it does this...</strong></p>
+              </div>
+            </li>
+            <li>
+              <div class="ln-sec-three-grid-item">
+                <i><img class="lazy" src="assets/images/list-icon.png" alt=""></i>
+                <p>Discover the moonshiner’s secret to arthritis pain repef!</p>
+              </div>
+            </li>
+            <li>
+              <div class="ln-sec-three-grid-item">
+                <i><img class="lazy" src="assets/images/list-icon.png" alt=""></i>
+                <p>Destroy smoking damage with this potent vitamin!</p>
+              </div>
+            </li>
+            <li>
+              <div class="ln-sec-three-grid-item">
+                <i><img class="lazy" src="assets/images/list-icon.png" alt=""></i>
+                <p>Why dementia is everyone’s problem...<strong>no matter your age.</strong></p>
+              </div>
+            </li>
+            <li>
+              <div class="ln-sec-three-grid-item">
+                <i><img class="lazy" src="assets/images/list-icon.png" alt=""></i>
+                <p><strong>Slash your risk of stroke with this ancient snowy Alp flower.</strong></p>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
@@ -159,6 +189,66 @@
   </div>
 </section>
 
+<section class="ln-sec-four plr-10">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 pull-right">
+        <div class="ln-sec-four-fea-img ln-sec-one-fea-img">
+          <img class="lazy" data-src="assets/images/ln-sec4-img-001.jpg" alt="" >
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="ln-sec-four-desc ln-sec-one-desc">
+          <div class="entry-nmbr inline-bg lazy text-white" style="background: url('assets/images/entry-nmbr-bg.png');">
+            <h3>04.</h3>
+          </div>
+          <h3>Priority support from day one.</h3>
+          <p>You'll be able to ask me and my team questions and get quick answers. You'll also have access to exclusive specials and the latest in health and wellness news.</p>
+          <p>Just use the button below to activate your CellXRenewal™ Platinum Pass now because this free offer is not available anywhere else.</p>
+          <p>Once you leave this page you won't have access to the Platinum Pass again and you'll also miss out on another super exciting bonus I have for you today.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="clu-text-modiule">
+          <p>You’ll instantly get your first issue of the <strong>Life Titan Insider Premium Newsletter.</strong></p>
+          <p>You’ll get 30 days absolutely <strong>FREE</strong> and then you can continue for just $14.95 a month!</p>
+          <p>And of course, you can cancel your Platinum Pass membership at any time by just emailing us at <u><a href="#"> support@lifetitannaturals.com</a></u></p>
+          <p>To get started, just click the button below to activate your free Platinum Pass membership.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="ln-sec-five plr-10">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="clu-text-modiule">
+          <p><strong>Here’s what to do next:</strong></p>
+          <p>Simply click the "Yes! Count Me In!" button and your Platinum Pass w<strong>ill</strong> be activated straight away.</p>
+        </div>
+        <div class="ln-sec-five-hding lazy inline-bg" style="background: url('assets/images/ln-sec5-hdr-bg.jpg');">
+          <strong>YES! COUNT ME IN!</strong>
+        </div>
+        <div class="sec-five-text-modiule">
+          <i><img class="lazy" data-src="assets/images/sec5-icon.png" alt=""></i>
+          <span>Yes! I Want To Join And Enjoy The Permanent Price Freeze of CellXRenewal, Free Shipping*,<br> A Free Lifetime Subscription to the Life Titan Insider Premium Newsletter, And All Of The<br> Other Perks Of The CellXRenewal™ Platinum Pass!  I understand I will receive my first<br> charge of $14.95, 30 days from today.</span>
+        </div>
+        <div class="clu-text-modiule">
+          <p>I agree to the payment terms of this product.</p>
+          <p>*Free Shipping within the US only.</p>
+          <p><strong>Terms:</strong> The Button Above Automatically Activates Your FREE 30 Day Platinum Pass. Should You Choose To Continue Membership You Don't Need To Do Anything And Your Membership Fee Of Just $14.95 Will Be Billed Every 30 Days. If You Wish To End Your Platinum Pass Membership At Any Time, Simply Let Me Know And I'll Cancel It For You And There Will Be No Further Billing. Ever.</p>
+        </div>
+        <div class="sec-five-text2-modiule">
+          <p><u><a href="#"><strong>No thank you!</strong> I understand that this is the only chance I’ll have to take advantage of this special offer. I acknowledge that reordering CellXRenewalTM later without it could cost up to $149 per bottle plus full shipping fees. I will pass on this forever.</a></u></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- class="lazy" data-src="assets/images/nfs-sec-2-btm-angel.png" -->
 </div>
