--- a/index-2.html
+++ b/index-2.html
@@ -93,7 +93,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 pull-right">
-        <div class="ln-sec-two-fea-img ln-sec-one-fea-img pull-right">
+        <div class="ln-sec-two-fea-img ln-sec-one-fea-img">
           <img class="lazy" data-src="assets/images/ln-sec2-img-001.png" alt="">
         </div>
       </div>
