desktop view done

--- a/index-1.html
+++ b/index-1.html
@@ -106,7 +106,7 @@
               <img class="lazy" data-src="assets/images/ls-sec-2-img-001.png">
             </div>
             <div class="ls-sec-2-btm-des">
-              <p>You see, the secret to getting astounding results for yourself requires only two things.</p>
+              <p><strong>You see, the secret to getting astounding results for yourself requires only two things.</strong></p>
             </div>
           </div>
         </div>
