--- a/index-2.html
+++ b/index-2.html
@@ -60,8 +60,8 @@
       <div class="row">
         <div class="col-md-12">
           <div class="ln-sec-one-btm-title-inr">
-            <strong>And that's where your CellXRenewal™ Platinum Pass is going to help you,<br>
-              because with CellXRenewal™ Platinum you’re going to get.</strong>
+            <strong>And that's where your CellXRenewal<sup>™</sup> Platinum Pass is going to help you,<br>
+              because with CellXRenewal<sup>™</sup> Platinum you’re going to get.</strong>
           </div>
         </div>
       </div>
@@ -80,8 +80,8 @@
             <h3>01.</h3>
           </div>
           <h3 class="text-green">A Lifetime Price freeze for<br> CellXRenewal™ at $39 per bottle</h3>
-          <p>That means when we raise the price back to its RRP of $149 per bottle you will still be able to use your Platinum Pass to purchase at this special one-time-only price.</p>
-          <p>Meaning you get to get more done more physically, personally, and professionally at a rock bottom price.</p>
+          <p>That means when we raise the price back to its RRP of $149 per bottle you will still be able to use your Platinum Pass to purchase at this special<br> one-time-only price.</p>
+          <p>Meaning you get to get more done more physically, personally, and professionally at a rock bottom<br> price.</p>
           <p>You can also use your Platinum Pass for your family and friends too.</p>
         </div>
       </div>
@@ -89,7 +89,7 @@
   </div>
 </section>
 
-<section class="ln-sec-two plr-10 lazy inline-bg" style="background: url('assets/images/ln-sec2-bg-img.png');">
+<section class="ln-sec-two plr-10 lazy" style="background: url('assets/images/ln-sec2-bg-img2.png');">
   <div class="container">
     <div class="row">
       <div class="col-md-6 pull-right">
@@ -103,8 +103,8 @@
             <h3>02.</h3>
           </div>
           <h3 class="text-green">Lifetime FREE Shipping* on<br> all products.</h3>
-          <p> We know you're going to love the results you get from <strong>CellXRenewal™</strong> and you're going to want to order more in the future...</p>
-          <p>So with your <strong>CellXRenewal™</strong> Platinum Pass you're going to get FREE LIFETIME shipping* for any future orders, reducing the cost for you even more...</p>
+          <p> We know you're going to love the results you get from <strong>CellXRenewal<sup>™</sup></strong> and you're going to want to order more in the future...</p>
+          <p>So with your <strong>CellXRenewal<sup>™</sup></strong> Platinum Pass you're going to get FREE LIFETIME shipping* for any future orders, reducing the cost for you even more...</p>
         </div>
       </div>
     </div>
@@ -202,7 +202,7 @@
           <div class="entry-nmbr inline-bg lazy text-white" style="background: url('assets/images/entry-nmbr-bg.png');">
             <h3>04.</h3>
           </div>
-          <h3>Priority support from day one.</h3>
+          <h3 class="text-green">Priority support from day one.</h3>
           <p>You'll be able to ask me and my team questions and get quick answers. You'll also have access to exclusive specials and the latest in health and wellness news.</p>
           <p>Just use the button below to activate your CellXRenewal™ Platinum Pass now because this free offer is not available anywhere else.</p>
           <p>Once you leave this page you won't have access to the Platinum Pass again and you'll also miss out on another super exciting bonus I have for you today.</p>
@@ -228,7 +228,7 @@
       <div class="col-md-12">
         <div class="clu-text-modiule">
           <p><strong>Here’s what to do next:</strong></p>
-          <p>Simply click the "Yes! Count Me In!" button and your Platinum Pass w<strong>ill</strong> be activated straight away.</p>
+          <p>Simply click the <strong>"Yes! Count Me In!"</strong> button and your Platinum Pass w<strong>ill</strong> be activated straight away.</p>
         </div>
         <div class="ln-sec-five-hding lazy inline-bg" style="background: url('assets/images/ln-sec5-hdr-bg.jpg');">
           <strong>YES! COUNT ME IN!</strong>
@@ -243,7 +243,7 @@
           <p><strong>Terms:</strong> The Button Above Automatically Activates Your FREE 30 Day Platinum Pass. Should You Choose To Continue Membership You Don't Need To Do Anything And Your Membership Fee Of Just $14.95 Will Be Billed Every 30 Days. If You Wish To End Your Platinum Pass Membership At Any Time, Simply Let Me Know And I'll Cancel It For You And There Will Be No Further Billing. Ever.</p>
         </div>
         <div class="sec-five-text2-modiule">
-          <p><u><a href="#"><strong>No thank you!</strong> I understand that this is the only chance I’ll have to take advantage of this special offer. I acknowledge that reordering CellXRenewalTM later without it could cost up to $149 per bottle plus full shipping fees. I will pass on this forever.</a></u></p>
+          <p><u><strong>No thank you!</strong> I understand that this is the only chance I’ll have to take advantage of this special offer. I acknowledge that reordering CellXRenewal<sup>TM</sup> later without it could cost up to $149 per bottle plus full shipping fees. I will pass on this forever.</u></p>
         </div>
       </div>
     </div>
