--- a/index-1.html
+++ b/index-1.html
@@ -76,18 +76,20 @@
   </section>
 
   <section class="ls-sec-1 plr-10">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="ls-sec-1-img">
-            <img class="lazy" data-src="assets/images/ls-sec-1-img-001.png">
+    <div class="ls-sec-1-inr">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="ls-sec-1-img">
+              <img class="lazy" data-src="assets/images/ls-sec-1-img-001.png">
+            </div>
           </div>
-        </div>
-        <div class="col-md-6">
-          <div class="ls-sec-1-des">
-            <p>CellXRenewal is the most exciting innovation in anti-aging today helping thousands of folks over 50 slow down Father Time. </p>
-            <p>I'm thrilled that you have just taken your first step!</p>
-            <p>I can’t wait to hear how <strong>CellXRenewal<sup>™</sup></strong> helps you to nourish your cells, upgrade your energy levels, support mitochondrial fitness and cell energy, boost productivity, fuel long-term health, and provide support for handling stress.</p>
+          <div class="col-md-6">
+            <div class="ls-sec-1-des">
+              <p>CellXRenewal is the most exciting innovation in anti-aging today helping thousands of folks over 50 slow down Father Time. </p>
+              <p>I'm thrilled that you have just taken your first step!</p>
+              <p>I can’t wait to hear how <strong>CellXRenewal<sup>™</sup></strong> helps you to nourish your cells, upgrade your energy levels, support mitochondrial fitness and cell energy, boost productivity, fuel long-term health, and provide support for handling stress.</p>
+            </div>
           </div>
         </div>
       </div>
