--- a/index-2.html
+++ b/index-2.html
@@ -79,7 +79,7 @@
           <div class="entry-nmbr inline-bg lazy text-white" style="background: url('assets/images/entry-nmbr-bg.png');">
             <h3>01.</h3>
           </div>
-          <h3 class="text-green">A Lifetime Price freeze for<br> CellXRenewal™ at $39 per bottle</h3>
+          <h3 class="text-green">A Lifetime Price freeze for<br> CellXRenewal<sup>™</sup> at $39 per bottle</h3>
           <p>That means when we raise the price back to its RRP of $149 per bottle you will still be able to use your Platinum Pass to purchase at this special<br> one-time-only price.</p>
           <p>Meaning you get to get more done more physically, personally, and professionally at a rock bottom<br> price.</p>
           <p>You can also use your Platinum Pass for your family and friends too.</p>
@@ -104,7 +104,7 @@
           </div>
           <h3 class="text-green">Lifetime FREE Shipping* on<br> all products.</h3>
           <p> We know you're going to love the results you get from <strong>CellXRenewal<sup>™</sup></strong> and you're going to want to order more in the future...</p>
-          <p>So with your <strong>CellXRenewal<sup>™</sup></strong> Platinum Pass you're going to get FREE LIFETIME shipping* for any future orders, reducing the cost for you even more...</p>
+          <p>So with your <strong>CellXRenewal<sup>™</sup></strong> Platinum Pass you're going to get FREE LIFETIME shipping* for any<br> future orders, reducing the cost for you even more...</p>
         </div>
       </div>
     </div>
@@ -127,7 +127,7 @@
           <h3 class="text-green">Discover top Anti-Aging tips, tricks and hacks only found in the Life Titan Insider Premium Newsletter.</h3>
           <h6 class="text-green">(Lifetime Subscription: <span>$1,995 Value</span>)</h6>
           <p>What’s happening right now in the nation’s healthcare sector is exactly why I created a special lifetime subscription of our Life Titan Insider Newsletter.</p>
-           <p>Once you become a CellXRenewal™ Platinum Pass Member you’ll  know that your subscription will last forever... that there will be no nasty surprises when your health is on the line and you need to turn to this information the most.</p>
+           <p>Once you become a CellXRenewal<sup>™</sup> Platinum Pass Member you’ll  know that your subscription will last forever... that there will be no nasty surprises when your health is on the line and you need to turn to<br> this information the most.</p>
         </div>
       </div>
     </div>
@@ -204,7 +204,7 @@
           </div>
           <h3 class="text-green">Priority support from day one.</h3>
           <p>You'll be able to ask me and my team questions and get quick answers. You'll also have access to exclusive specials and the latest in health and wellness news.</p>
-          <p>Just use the button below to activate your CellXRenewal™ Platinum Pass now because this free offer is not available anywhere else.</p>
+          <p>Just use the button below to activate your CellXRenewal<sup>™</sup> Platinum Pass now because this<br> free offer is not available anywhere else.</p>
           <p>Once you leave this page you won't have access to the Platinum Pass again and you'll also miss out on another super exciting bonus I have for you today.</p>
         </div>
       </div>
@@ -231,19 +231,19 @@
           <p>Simply click the <strong>"Yes! Count Me In!"</strong> button and your Platinum Pass w<strong>ill</strong> be activated straight away.</p>
         </div>
         <div class="ln-sec-five-hding lazy inline-bg" style="background: url('assets/images/ln-sec5-hdr-bg.jpg');">
-          <strong>YES! COUNT ME IN!</strong>
+          <strong><a href="#">YES! COUNT ME IN!</a></strong>
         </div>
         <div class="sec-five-text-modiule">
           <i><img class="lazy" data-src="assets/images/sec5-icon.png" alt=""></i>
-          <span>Yes! I Want To Join And Enjoy The Permanent Price Freeze of CellXRenewal, Free Shipping*,<br> A Free Lifetime Subscription to the Life Titan Insider Premium Newsletter, And All Of The<br> Other Perks Of The CellXRenewal™ Platinum Pass!  I understand I will receive my first<br> charge of $14.95, 30 days from today.</span>
+          <span>Yes! I Want To Join And Enjoy The Permanent Price Freeze of CellXRenewal, Free Shipping*,<br> A Free Lifetime Subscription to the Life Titan Insider Premium Newsletter, And All Of The<br> Other Perks Of The CellXRenewal<sup>™</sup> Platinum Pass!  I understand I will receive my first<br> charge of $14.95, 30 days from today.</span>
         </div>
         <div class="clu-text-modiule">
           <p>I agree to the payment terms of this product.</p>
           <p>*Free Shipping within the US only.</p>
-          <p><strong>Terms:</strong> The Button Above Automatically Activates Your FREE 30 Day Platinum Pass. Should You Choose To Continue Membership You Don't Need To Do Anything And Your Membership Fee Of Just $14.95 Will Be Billed Every 30 Days. If You Wish To End Your Platinum Pass Membership At Any Time, Simply Let Me Know And I'll Cancel It For You And There Will Be No Further Billing. Ever.</p>
+          <p><strong>Terms:</strong> The Button Above Automatically Activates Your FREE 30 Day Platinum Pass. Should You Choose To Continue Membership You Don't Need To Do Anything And Your Membership Fee Of Just $14.95 Will Be Billed Every 30 Days. If You Wish To End Your Platinum Pass Membership At Any Time, Simply Let Me<br> Know And I'll Cancel It For You And There Will Be No Further Billing. Ever.</p>
         </div>
         <div class="sec-five-text2-modiule">
-          <p><u><strong>No thank you!</strong> I understand that this is the only chance I’ll have to take advantage of this special offer. I acknowledge that reordering CellXRenewal<sup>TM</sup> later without it could cost up to $149 per bottle plus full shipping fees. I will pass on this forever.</u></p>
+          <p><u><strong>No thank you!</strong> I understand that this is the only chance I’ll have to take advantage of this special offer. I acknowledge that reordering CellXRenewal</u><sup>TM</sup><u> later without it could cost up to $149 per bottle plus full shipping fees. I will pass on this forever.</u></p>
         </div>
       </div>
     </div>
