--- a/index-2.html
+++ b/index-2.html
@@ -234,8 +234,7 @@
           <strong><a href="#">YES! COUNT ME IN!</a></strong>
         </div>
         <div class="sec-five-text-modiule">
-          <i><img class="lazy" data-src="assets/images/sec5-icon.png" alt=""></i>
-          <span>Yes! I Want To Join And Enjoy The Permanent Price Freeze of CellXRenewal, Free Shipping*,<br> A Free Lifetime Subscription to the Life Titan Insider Premium Newsletter, And All Of The<br> Other Perks Of The CellXRenewal<sup>™</sup> Platinum Pass!  I understand I will receive my first<br> charge of $14.95, 30 days from today.</span>
+          <span><i><img class="lazy" data-src="assets/images/sec5-icon.png" alt=""></i>Yes! I Want To Join And Enjoy The Permanent Price Freeze of CellXRenewal, Free Shipping*,<br> A Free Lifetime Subscription to the Life Titan Insider Premium Newsletter, And All Of The<br> Other Perks Of The CellXRenewal<sup>™</sup> Platinum Pass!  I understand I will receive my first<br> charge of $14.95, 30 days from today.</span>
         </div>
         <div class="clu-text-modiule">
           <p>I agree to the payment terms of this product.</p>
