desktop fix done

--- a/index.html
+++ b/index.html
@@ -14,50 +14,370 @@
   
 </head> 
 <body> 
-<header class="fl-hdr">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="header-innr clearfix"> 
-          <div class="hdr-left"> 
-            <a class="hdr-logo" href="#">
-              <img class="lazy" data-src="assets/images/logo.jpg" alt="Logo" />
-            </a>
+  <header class="fl-hdr">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="header-innr clearfix"> 
+            <div class="hdr-left"> 
+              <a class="hdr-logo" href="#">
+                <img class="lazy" data-src="assets/images/logo.jpg"/>
+              </a>
+            </div>
+            <div class="hdr-rgt"> 
+              <a class="secure-img">
+                <img class="lazy" data-src="assets/images/hdr-secure-img.jpg"/>
+              </a>   
+            </div> 
           </div>
-          <div class="hdr-rgt"> 
-            <a class="secure-img">
-              <img class="lazy" data-src="assets/images/hdr-secure-img.jpg" alt="secure"/>
-            </a>   
-          </div> 
         </div>
       </div>
     </div>
-  </div>
 </header>
 
 <div class="fl-page-bdy-controller">
 
-<section class="plr-10">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="">
-          
+  <section class="fl-shipping-progress-bar plr-10"> 
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="fl-shipping clearfix text-center">
+            <div class="fl-shipping-col">
+              <img class="lazy" data-src="assets/images/progress-bar-img001.png">
+              <h4>Initial Order</h4>
+            </div>
+            <div class="fl-shipping-col two_sec">
+              <img class="lazy" data-src="assets/images/progress-bar-img002.png">
+              <h4>Optional Upgrades</h4>
+            </div>
+            <div class="fl-shipping-col">
+              <img class="lazy" data-src="assets/images/progress-bar-img003.png">
+              <h4>Order completed</h4>
+            </div>
+          </div>          
+        </div>        
+      </div>
+    </div>
+  </section>
+
+
+  <section class="fl-page-bnr inline-bg lazy plr-10" data-src="assets/images/page-bnr.jpg">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="fl-page-bnr-cntlr">
+            <h1><strong>Get the</strong> <br> CellXRenewal<sup>™</sup> <br> <strong>Platinum Pass</strong></h1>
+          </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="">
+    </div>
+  </section>
+
+  <section class="ls-sec-1 plr-25">
+    <div class="ls-sec-1-inr">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="ls-sec-1-img">
+              <img class="lazy" data-src="assets/images/ls-sec-1-img-001.png">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="ls-sec-1-des">
+              <p>CellXRenewal is the most exciting innovation in anti-aging today helping thousands of folks over 50 slow down Father Time. </p>
+              <p>I'm thrilled that you have just taken your first step!</p>
+              <p>I can’t wait to hear how <strong>CellXRenewal<sup>™</sup></strong> helps <br>you to nourish your cells, upgrade your energy levels, support mitochondrial fitness and cell energy, boost productivity, fuel long-term <br>health, and provide support for handling stress.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="ls-sec-2 plr-10">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="ls-sec-2-inr">
+            <div class="ls-sec-2-top-des">
+              <p>But before we finalize your shipment, you'll want to activate your 30 Days <strong>FREE CellXRenewal<sup>™</sup> <br>Platinum Pass. Customize Your Order</strong></p>
+            </div>
+            <div class="ls-sec-2-img">
+              <img class="lazy" data-src="assets/images/ls-sec-2-img-001.png">
+            </div>
+            <div class="ls-sec-2-btm-des">
+              <p><strong>You see, the secret to getting astounding results for yourself requires only two things.</strong></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="ls-sec-3 plr-10">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="ls-sec-3-inr">
+            <div class="text-center">
+              <h2 class="lazy text-white" data-src="assets/images/ls-sec-3-title-bg.png">NUMBER #1 <br> You Must Make The Decision To Start.</h2>
+            </div>
+            <div class="ls-sec-3-des">
+              <p>You've just taken care of that so we are already ahead of the game there.</p>
+              <p>But of course...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="ln-sec-one plr-10">
+    <div class="ln-sec-one-hedding lazy" style="background: url('assets/images/ln-sec1-hdr-bg2.png');">
+      <div class="ln-sec-one-top-hdng lazy" style="background: url('assets/images/ln-sec1-hdr-bg.png');">
+        <h2 class="ln-sec-one-title text-white">Number #2</h2>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="ln-sec-one-hedding-inr">
+              <h2 class="ln-sec-one-sub-title text-white">You Must Keep Going Strong</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="ln-sec-one-btm-title">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="ln-sec-one-btm-title-inr">
+              <strong>And that's where your CellXRenewal<sup>™</sup> Platinum Pass is going to help you,<br>
+                because with CellXRenewal<sup>™</sup> Platinum you’re going to get.</strong>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 pull-right">
+          <div class="ln-sec-one-fea-img">
+            <img class="lazy" data-src="assets/images/ln-sec-img-001.jpg">
+          </div>
+        </div>
+        <div class="col-md-6 pull-left">
+          <div class="ln-sec-one-desc">
+            <div class="entry-nmbr inline-bg lazy text-white" style="background: url('assets/images/entry-nmbr-bg.png');">
+              <h3>01.</h3>
+            </div>
+            <h3 class="text-green">A Lifetime Price freeze for<br> CellXRenewal<sup>™</sup> at $39 per bottle</h3>
+            <p>That means when we raise the price back to its RRP of $149 per bottle you will still be able to use your Platinum Pass to purchase at this special<br> one-time-only price.</p>
+            <p>Meaning you get to get more done more physically, personally, and professionally at a rock bottom<br> price.</p>
+            <p>You can also use your Platinum Pass for your family and friends too.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="ln-sec-two plr-10 lazy" style="background: url('assets/images/ln-sec2-bg-img2.png');">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 pull-right">
+          <div class="ln-sec-two-fea-img ln-sec-one-fea-img">
+            <img class="lazy" data-src="assets/images/ln-sec2-img-001.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 pull-left">
+          <div class="ln-sec-two-desc ln-sec-one-desc">
+            <div class="entry-nmbr inline-bg lazy text-white" style="background: url('assets/images/entry-nmbr-bg.png');">
+              <h3>02.</h3>
+            </div>
+            <h3 class="text-green">Lifetime FREE Shipping* on<br> all products.</h3>
+            <p> We know you're going to love the results you get from <strong>CellXRenewal<sup>™</sup></strong> and you're going to want to order more in the future...</p>
+            <p>So with your <strong>CellXRenewal<sup>™</sup></strong> Platinum Pass you're going to get FREE LIFETIME shipping* for any<br> future orders, reducing the cost for you even more...</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="ln-sec-three plr-10">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 pull-right">
+          <div class="ln-sec-three-fea-img ln-sec-one-fea-img">
+            <img class="lazy" data-src="assets/images/ln-sec3-img-001.jpg" alt="" >
+          </div>
+        </div>
+        <div class="col-md-6 pull-left">
+          <div class="ln-sec-three-desc ln-sec-one-desc">
+            <div class="entry-nmbr inline-bg lazy text-white" style="background: url('assets/images/entry-nmbr-bg.png');">
+              <h3>03.</h3>
+            </div>
+            <h3 class="text-green">Discover top Anti-Aging tips, tricks and hacks only found in the Life Titan Insider Premium Newsletter.</h3>
+            <h6 class="text-green">(Lifetime Subscription: <span>$1,995 Value</span>)</h6>
+            <p>What’s happening right now in the nation’s healthcare sector is exactly why I created a special lifetime subscription of our Life Titan Insider Newsletter.</p>
+             <p>Once you become a CellXRenewal<sup>™</sup> Platinum Pass Member you’ll  know that your subscription will last forever... that there will be no nasty surprises when your health is on the line and you need to turn to<br> this information the most.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="clu-text-modiule ln-sec-one-desc">
+            <p>I’d normally charge $1,995 for a lifetime subscription...</p>
+            <p>But when you accept my offer today, it’s absolutely FREE!</p>
+            <p>That means you’ll pay NOTHING  for a lifetime of Life Titan Insider.</p>
+            <p>Discover how to protect your health during these uncertain times and the latest in little-known health breakthroughs.  We dig deep in the latest scientific research to share with you news like this:</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="ln-sec-three-sub-sec ln-sec-three-grid">
+            <ul class="reset-list">
+              <li>
+                <div class="ln-sec-three-grid-item">
+                  <i><img class="lazy" src="assets/images/list-icon.png" alt=""></i>
+                  <p><strong>The pursuit of profit</strong><br>
+                How frankenfood skyrocketed hospital bills...</p>
+                </div>
+              </li>
+              <li>
+                <div class="ln-sec-three-grid-item">
+                  <i><img class="lazy" src="assets/images/list-icon.png" alt=""></i>
+                  <p><strong>Sugar is not always sweet especially when it does this...</strong></p>
+                </div>
+              </li>
+              <li>
+                <div class="ln-sec-three-grid-item">
+                  <i><img class="lazy" src="assets/images/list-icon.png" alt=""></i>
+                  <p>Discover the moonshiner’s secret to arthritis pain repef!</p>
+                </div>
+              </li>
+              <li>
+                <div class="ln-sec-three-grid-item">
+                  <i><img class="lazy" src="assets/images/list-icon.png" alt=""></i>
+                  <p>Destroy smoking damage with this potent vitamin!</p>
+                </div>
+              </li>
+              <li>
+                <div class="ln-sec-three-grid-item">
+                  <i><img class="lazy" src="assets/images/list-icon.png" alt=""></i>
+                  <p>Why dementia is everyone’s problem...<strong>no matter your age.</strong></p>
+                </div>
+              </li>
+              <li>
+                <div class="ln-sec-three-grid-item">
+                  <i><img class="lazy" src="assets/images/list-icon.png" alt=""></i>
+                  <p><strong>Slash your risk of stroke with this ancient snowy Alp flower.</strong></p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="ln-sec-four plr-10">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 pull-right">
+          <div class="ln-sec-four-fea-img ln-sec-one-fea-img">
+            <img class="lazy" data-src="assets/images/ln-sec4-img-001.jpg" alt="" >
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="ln-sec-four-desc ln-sec-one-desc">
+            <div class="entry-nmbr inline-bg lazy text-white" style="background: url('assets/images/entry-nmbr-bg.png');">
+              <h3>04.</h3>
+            </div>
+            <h3 class="text-green">Priority support from day one.</h3>
+            <p>You'll be able to ask me and my team questions and get quick answers. You'll also have access to exclusive specials and the latest in health and wellness news.</p>
+            <p>Just use the button below to activate your CellXRenewal<sup>™</sup> Platinum Pass now because this<br> free offer is not available anywhere else.</p>
+            <p>Once you leave this page you won't have access to the Platinum Pass again and you'll also miss out on another super exciting bonus I have for you today.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="clu-text-modiule mt-0">
+            <p>You’ll instantly get your first issue of the <strong>Life Titan Insider Premium Newsletter.</strong></p>
+            <p>You’ll get 30 days absolutely <strong>FREE</strong> and then you can continue for just $14.95 a month!</p>
+            <p>And of course, you can cancel your Platinum Pass membership at any time by just emailing us at <u><a href="#"> support@lifetitannaturals.com</a></u></p>
+            <p>To get started, just click the button below to activate your free Platinum Pass membership.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="ln-sec-five plr-10">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="clu-text-modiule">
+            <p><strong>Here’s what to do next:</strong></p>
+            <p>Simply click the <strong>"Yes! Count Me In!"</strong> button and your Platinum Pass w<strong>ill</strong> be activated straight away.</p>
+          </div>
+          <div class="ln-sec-five-hding lazy inline-bg" style="background: url('assets/images/ln-sec5-hdr-bg.jpg');">
+            <strong><a href="#">YES! COUNT ME IN!</a></strong>
+          </div>
+          <div class="sec-five-text-modiule">
+            <span><i><img class="lazy" data-src="assets/images/sec5-icon.png" alt=""></i>Yes! I Want To Join And Enjoy The Permanent Price Freeze of CellXRenewal, Free Shipping*,<br> A Free Lifetime Subscription to the Life Titan Insider Premium Newsletter, And All Of The<br> Other Perks Of The CellXRenewal<sup>™</sup> Platinum Pass!  I understand I will receive my first<br> charge of $14.95, 30 days from today.</span>
+          </div>
+          <div class="clu-text-modiule">
+            <p>I agree to the payment terms of this product.</p>
+            <p>*Free Shipping within the US only.</p>
+            <p><strong>Terms:</strong> The Button Above Automatically Activates Your FREE 30 Day Platinum Pass. Should You Choose To Continue Membership You Don't Need To Do Anything And Your Membership Fee Of Just $14.95 Will Be Billed Every 30 Days. If You Wish To End Your Platinum Pass Membership At Any Time, Simply Let Me<br> Know And I'll Cancel It For You And There Will Be No Further Billing Ever.</p>
+          </div>
+          <div class="sec-five-text2-modiule">
+            <p><u><strong>No thank you!</strong> I understand that this is the only chance I’ll have to take advantage of this special offer. I acknowledge that reordering CellXRenewal</u><sup>TM</sup><u> later without it could cost up to $149 per bottle plus full shipping fees. I will pass on this forever.</u></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+</div>
+
+<footer class="fl-footer-wrap plr-10">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="fl-footer-inner">
+          <nav class="fl-ftr-nav">
+            <ul class="clearfix ulc">
+              <li><a target="_blank" href="#">About Us</a></li>
+              <li><a target="_blank" href="#">Terms</a></li>
+              <li><a target="_blank" href="#">Privacy</a></li>
+              <li><a target="_blank" href="#">Contact</a></li>
+              <li><a target="_blank" href="#">Return Policy</a></li>
+            </ul>
+          </nav>
           
+          <div class="fl-ftr-des">
+            <p>Disclaimer: Statements on this website have not been evaluated by the Food and Drug Administration. Products are not intended to diagnose, treat, cure or prevent any disease. If you are pregnant, nursing, taking medication, or have a medical condition, consult your physician before using our products.</p> 
+
+            <p>Not intended for children.</p>
+
+            <p>You should always consult with your healthcare practitioner prior to starting any new dietary supplement or program.</p>
+            <p>The information provided on this site is for informational purposes only and is not intended as a substitute for advice from your physician or other healthcare professional or any information contained on or in any product label or packaging. You should not use the information on this site for diagnosis or treatment of any health problem or for prescription of any medication or other treatment. Always consult with a healthcare professional before starting any diet, exercise or supplementation program, before taking any medication, or if you have or suspect you might have a health problem. You should not stop taking any medication without first consulting your physician.</p>
+            <p>As individuals differ, so will results. Life Titan Naturals distributes a product line made with natural ingredients. Always check with your doctor for risks associated with dietary supplements and your specific health conditions and/or allergies. <br>Resale: Products are not allowed to be resold without prior written consent. <br>Customs: International shipments may incur additional import duties and fees. Life Titan Naturals is not responsible for any additional charges incurred. Please contact your local customs office for current policies and procedures. <br>*Return Policy: All bottles ordered need to be returned for a full refund on every bottle, empty, unopened or partially used. For more on Life Titan Naturals refund policy, please click here.
+            </p>
+          </div>
+          <div class="fl-copyright">
+            <p>Copyright © 2020. Life Titan Naturals</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</section>
+</footer>
 
-
-
-
-</div>
 
 
 <script src="assets/js/jquery.min.js"></script>
